<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LogServiceClient</string>
    <string name="startserv">Start logging</string>
    <string name="stopserv">Stop logging</string>
    <string name="invokeserv">Get counter</string>
    <string name="bindserv">Bind service</string>
    <string name="unbindserv">Unbind service</string>
    <string name="default_result">N/A</string>
    <string name="servicestatus">Service status: N/A</string>
</resources>
